--- a/src/layouts/homepage-layout.astro
+++ b/src/layouts/homepage-layout.astro
@@ -21,23 +21,46 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/worship">Worship</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link active" aria-current="page" href="/news">News</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Dropdown link
+                                About Us
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="/about-us/beliefs-history">Beliefs & History</a></li>
+                                <li><a class="dropdown-item" href="/about-us/mission-vision">Mission & Vision</a></li>
+                                <li><a class="dropdown-item" href="/about-us/pastor-leaders">Pastor & Leaders</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Connect
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/connect/children">Children</a></li>
+                                <li><a class="dropdown-item" href="/connect/jr-high">Jr. High</a></li>
+                                <li><a class="dropdown-item" href="/connect/high-school">High School</a></li>
+                                <li><a class="dropdown-item" href="/connect/adults">Adults</a></li>
+                                <li><a class="dropdown-item" href="/connect/comfort-dog">Comfort Dog</a></li>
+                                <li><a class="dropdown-item" href="/connect/beyond-borders">Beyond Borders</a></li>
+                                <li><a class="dropdown-item" href="/connect/serve">Serve</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Connect
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/resources/contact">Contact</a></li>
+                                <li><a class="dropdown-item" href="/resources/giving">Giving</a></li>
+                                <li><a class="dropdown-item" href="/resources/links">Links</a></li>
                             </ul>
                         </li>
                     </ul>
