added icons to homepage layout

--- a/src/layouts/homepage-layout.astro
+++ b/src/layouts/homepage-layout.astro
@@ -42,6 +42,15 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
+                        <a href="https://www.facebook.com/therockseward/" style="text-decoration: none;">
+                            <i class="bi-facebook" style="font-size: 1.75rem; color: #1877F2; margin: 10px"></i>
+                        </a>
+                        <a href="https://www.youtube.com/c/TheRockSewardNebraska" style="text-decoration: none;">
+                            <i class="bi-youtube" style="font-size: 1.75rem; color: #FF0000; margin: 10px"></i>
+                        </a>
+                        <a href="https://vimeo.com/therockseward" style="text-decoration: none;">
+                            <i class="bi-vimeo" style="font-size: 1.75rem; color: #1AB7EA; margin: 10px"></i>
+                        </a>
                     </ul>
                 </div>
             </div>
