--- a/src/layouts/secondary-layout.astro
+++ b/src/layouts/secondary-layout.astro
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
+
     <body>
-        
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">
+                    <img src="/public/images/rock-logo.png" alt="The Rock">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/worship">Worship</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/news">News</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                About Us
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/about-us/beliefs-history">Beliefs & History</a></li>
+                                <li><a class="dropdown-item" href="/about-us/mission-vision">Mission & Vision</a></li>
+                                <li><a class="dropdown-item" href="/about-us/pastor-leaders">Pastor & Leaders</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Connect
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/connect/children">Children</a></li>
+                                <li><a class="dropdown-item" href="/connect/jr-high">Jr. High</a></li>
+                                <li><a class="dropdown-item" href="/connect/high-school">High School</a></li>
+                                <li><a class="dropdown-item" href="/connect/adults">Adults</a></li>
+                                <li><a class="dropdown-item" href="/connect/comfort-dog">Comfort Dog</a></li>
+                                <li><a class="dropdown-item" href="/connect/beyond-borders">Beyond Borders</a></li>
+                                <li><a class="dropdown-item" href="/connect/serve">Serve</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Resources
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/resources/contact">Contact</a></li>
+                                <li><a class="dropdown-item" href="/resources/giving">Giving</a></li>
+                                <li><a class="dropdown-item" href="/resources/links">Links</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
     </body>
+
 </html>
