--- a/src/layouts/homepage-layout.astro
+++ b/src/layouts/homepage-layout.astro
@@ -57,7 +57,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Connect
+                                Resources
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/resources/contact">Contact</a></li>
