tweak to icon img size

--- a/src/layouts/homepage-layout.astro
+++ b/src/layouts/homepage-layout.astro
@@ -14,8 +14,8 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">
-                    <img src="/public/images/rock-logo.png" alt="The Rock">
+                <a class="navbar-brand" href="/"> <!-- The current png is 241 by 100 px, so this styling halves that to shrink it proportionately -->
+                    <img src="/public/images/rock-logo.png" style="width: 120px; height: 50px" alt="The Rock">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
