--- a/src/components/introductionvideo.astro
+++ b/src/components/introductionvideo.astro
@@ -10,40 +10,44 @@
     <style>
     .hero {
         display: flex;
+        flex-direction: column;
+        color: white;
+        padding-bottom: 100px; 
+        position: relative;
+        overflow: hidden;
+        min-height: 100vh;
+    }
+
+    .hero-body {
         justify-content: center;
         align-items: center;
         text-align: center;
-        color: white;
-        margin-bottom: 100px; 
-        position: relative;
-        overflow: hidden;
-        min-height: 100%;
+        margin-top: auto;
+        margin-bottom: auto;
     }
-
     .video-bg {
         width: 100%;
         object-fit: cover; /* use "cover" to avoid distortion */
-        position: relative;
-        z-index: 2; 
+        position: absolute;
+        z-index: -1; 
         filter: brightness(50%);
         top: 0;
         left: 0;
         min-width: 100%;
         min-height: 100%;
     }
-
     </style>
 
     <body>
         <!-- Where first impressions are made. -->
-        
         <div class="hero">
-
-            <!-- Video that's playing on the front page. -->
-            <video playsinline autoplay loop muted class="video-bg" id="introduction-video">
+            <slot />
+            <div class="container hero-body">
+                <!-- Video that's playing on the front page. -->
+                <video playsinline autoplay loop muted class="video-bg" id="introduction-video">
                 <source src="/videos/promo-video.mp4" type="video/mp4">
-            </video>
-
+                </video>
+            </div>
         </div>
         
     </body>
