tiny homepage fix

--- a/src/layouts/homepage-layout.astro
+++ b/src/layouts/homepage-layout.astro
@@ -44,7 +44,7 @@ import Introductionvideo from "../components/introductionvideo.astro";
                                     <a class="nav-link" aria-current="page" href="/news">News</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                         aria-expanded="false">
                                         About Us
                                     </a>
