--- a/src/layouts/secondary-layout.astro
+++ b/src/layouts/secondary-layout.astro
@@ -1,3 +1,7 @@
+---
+import Footer from "./footer.astro";
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,7 +18,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="/public/images/rock-logo.png" alt="The Rock">
+                    <img src="/images/rock-logo-black.png" alt="The Rock">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +33,7 @@
                             <a class="nav-link active" aria-current="page" href="/news">News</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 About Us
                             </a>
@@ -40,7 +44,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 Connect
                             </a>
@@ -55,7 +59,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 Resources
                             </a>
@@ -69,6 +73,10 @@
                 </div>
             </div>
         </nav>
+
+
+        <Footer />
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
