--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -1,3 +1,8 @@
+---
+import SecondaryLayout from "../layouts/secondary-layout.astro";
+
+---
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -7,6 +12,9 @@
         <title>The Rock - News</title>
     </head>
     <body>
+        <SecondaryLayout>
+            
+        </SecondaryLayout>
         
     </body>
 </html>
