tweaks to secondary template and news page.

--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -13,8 +13,10 @@ import SecondaryLayout from "../layouts/secondary-layout.astro";
     </head>
     <body>
         <SecondaryLayout>
-            
+            <br> <br>
+            Content here
+            <br> <br>
         </SecondaryLayout>
-        
+
     </body>
 </html>
