--- a/src/layouts/secondary-layout.astro
+++ b/src/layouts/secondary-layout.astro
@@ -12,6 +12,7 @@ import Footer from "./footer.astro";
         <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
 
     <body>
@@ -73,6 +74,11 @@ import Footer from "./footer.astro";
                 </div>
             </div>
         </nav>
+        
+        <!-- Put the stuff here in the page -->
+        <slot>
+            Put your stuff here
+        </slot>
 
 
         <Footer />
